Broken image fix
Images still broken due to typo, applied a fix to try and correct the issue.

--- a/recipes/omurice.html
+++ b/recipes/omurice.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <img src="/assets/omurice.jpg" width="300px" lenght="300px">
+    <img src="assets/omurice.jpg" width="300px" lenght="300px">
     <h1>Omurice</h1>
         <h3>Description:</h3>
             <p>
