--- a/recipes/sushirice.html
+++ b/recipes/sushirice.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <img src="/assets/sushirice.webp">
+    <img src="assets/sushirice.webp">
     <h1>Sushi Rice</h1>
         <h3>Description:</h3>
             <p>
