--- a/recipes/onigiri.html
+++ b/recipes/onigiri.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <img src="/assets/onigiri2.webp" width="300px" length="300px">
+    <img src="assets/onigiri2.webp" width="300px" length="300px">
     <h1>Onigiri</h1>
         <h3>Description:</h3>
             <p>Stuffed rice balls with a variety of fillings.</p>
