--- a/recipes/oyakodon.html
+++ b/recipes/oyakodon.html
@@ -7,7 +7,7 @@
     <title>Oyako-don Recipe</title>
 </head>
 <body>
-    <img src="/assets/oyakodon.webp" width="300px" lenght="300px">       
+    <img src="assets/oyakodon.webp" width="300px" lenght="300px">       
     <h1>Oyako Don</h1>
         <h3>Description</h3>
         <p>
